--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>guru.springframework</groupId>
     <artifactId>mb2g-testing2</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.3</version>
 
     <properties>
         <java.version>11</java.version>
@@ -15,6 +15,23 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <version>${revision}</version>
     </properties>
+
+    <!--repositories>
+        <repository>
+            <id>nexus-snapshot</id>
+            <url>http://localhost:8081/repository/nexus-snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>nexus-release</id>
+            <url>http://localhost:8081/repository/nexus-release</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories-->
 
     <build>
         <extensions>
@@ -25,7 +42,6 @@
             </extension>
         </extensions>
     </build>
-
     <profiles>
         <profile>
             <id>packagecloud</id>
@@ -39,10 +55,22 @@
                     <url>packagecloud+https://packagecloud.io/arunprasad_bh/snapshot</url>
                 </snapshotRepository>
             </distributionManagement>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
 
+        </profile>
+        <profile>
+            <id>nexus-distro</id>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>nexus-snapshot</id>
+                    <url>http://localhost:8081/repository/nexus-snapshot/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>nexus-release</id>
+                    <url>http://localhost:8081/repository/nexus-release/</url>
+                </repository>
+            </distributionManagement>
+
+        </profile>
     </profiles>
+
 </project>
